# ai-graderagentic

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_user_table.py
backend/src/ai_grader/: __init__.py  config.py  database.py  deps.py  main.py
backend/src/ai_grader/domain/: user.py
backend/tests/: conftest.py  test_health.py
frontend/: .dockerignore  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/auth/: AuthContext.tsx  ProtectedRoute.tsx
frontend/src/pages/: Dashboard.tsx  Login.tsx  Register.tsx
