[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-grader"
version = "0.1.0"
description = "AI-powered grading application for faculty"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.115",
    "uvicorn[standard]>=0.28",

    # Database
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
    "asyncpg>=0.29",

    # Auth
    "passlib[bcrypt]>=1.7",
    "pyjwt>=2.8",
    "python-multipart>=0.0.6",

    # Data validation
    "pydantic>=2.0",
    "pydantic-settings>=2.0",

    # PDF handling
    "pdfplumber>=0.10",
    "pypdfium2>=4.30",

    # Anthropic
    "anthropic>=0.28",

    # Excel generation
    "openpyxl>=3.1",

    # Utilities
    "python-dotenv>=1.0",
    "httpx>=0.25",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "pytest-benchmark>=4.0",
    "respx>=0.21",
    "ruff>=0.2",
    "mypy>=1.8",
    "pytest-postgresql>=6.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--strict-markers"
